@@ -1,5 +1,7 @@
 2008-01-06  Andreas Kirschbaum
 
+	* Do not crash when identifying items.
+
 	* Fix display glitches when scrolling the map view. Now the
 	character is always displayed in the center of the screen.
 
